# vite-leptos-template

./: .gitignore  package-lock.json  package.json  tailwind.config.js
src/: main.ts
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs
